test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/cast_incomplete_struct.plx
type struc s;

extrn v: struc s;

pub fn main(none) i32 {
    #  you can't perform a cast on a struct with incomplete type
    cast<none>(v)
    return 0
}
